# vaeren

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_REPORT.md  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml
backend/: .coveragerc  Dockerfile  manage.py  pyproject.toml  pytest.ini
backend/arbeitsschutz/: README.md  __init__.py  apps.py  fristen.py  llm.py  seed_data.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/auditor_export/: __init__.py  admin.py  apps.py  models.py  rules.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/auftragsverarbeitung/: apps.py  models.py  serializers.py  signals.py  sweeps.py  urls.py  views.py
backend/config/: __init__.py  celery.py  celery_tasks.py  urls_public.py  urls_tenant.py
backend/core/: apps.py  audit_context.py  audit_views.py  auth_views.py  basis_hinweis.py  betriebsmerkmale.py  compression.py  dashboard_views.py  fields.py  llm_client.py  llm_validator.py  managers.py  mfa_views.py  mixins.py  models.py  modules.py  notification_views.py  notifications.py  permissions.py  regulierungen.py  relevanz_engine.py  rules.py  scoring.py  serializers.py  settings_views.py  signals.py  unternehmens_osint.py  urls.py  views.py
backend/datenpannen/: apps.py  llm.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/fragebogen/: answer_engine.py  apps.py  bbox.py  bibliothek.py  evidence_pool.py  models.py  rdg.py  serializers.py  tasks.py  urls.py  views.py
backend/hinschg/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/iso27001/: admin.py  apps.py  llm.py  mapping.py  models.py  permissions.py  scoring.py  serializers.py  signals.py  urls.py  views.py
backend/iso42001/: apps.py  llm.py  models.py  permissions.py  scoring.py  serializers.py  tests.py  urls.py  views.py
backend/iso42001_catalog/: apps.py  models.py  seed_data.py
backend/ki_inventar/: apps.py  llm.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/nis2/: apps.py  models.py  serializers.py  urls.py  views.py
backend/onboarding_wizard/: apps.py  models.py  serializers.py  urls.py  views.py
backend/pflichtunterweisung/: admin.py  apps.py  models.py  pdf.py  seed_data.py  serializers.py  snapshots.py  tasks.py  tokens.py  urls.py  views.py
backend/redaktion/: __init__.py  admin.py  apps.py  mail.py  models.py  serializers.py  tasks.py  urls.py  urls_internal.py  views.py  views_internal.py
backend/scripts/: export-openapi.sh  export_relevanz_testvektoren.py
backend/tenants/: admin.py  apps.py  cookie_scanner.py  models.py  onboarding.py  serializers.py  setup_views.py  urls.py  views.py
backend/tests/: arbsch_fixtures.py  conftest.py  factories.py  test_arbsch_api_workflow.py  test_arbsch_gbu.py  test_arbsch_llm_validator.py  test_arbsch_massnahmen.py  test_arbsch_permissions.py  test_arbsch_quoten_asa.py  test_arbsch_scoring.py  test_arbsch_seed_idempotenz.py  test_arbsch_stammdaten.py  test_arbsch_tasks.py  test_arbsch_unfall.py  test_arbsch_vorschlag_akzeptieren.py  test_audit_log_mechanics.py  test_audit_log_model.py  test_audit_settings_api.py  test_auth_mfa.py  test_auth_smoke.py  test_avv_sweep.py  test_basis_hinweis_rdg.py  test_betriebsmerkmale.py  test_compliance_score.py  test_compliance_task_api.py  test_compliance_task_model.py  test_create_tenant_command.py  test_datenpannen.py  test_demo_request.py  test_encrypted_field.py  test_ensure_public_domains.py  test_evidence_model.py  test_fragebogen_answer_engine.py  test_fragebogen_api.py  test_fragebogen_bibliothek.py  test_fragebogen_evidence_pool.py  test_fragebogen_export_beiblatt.py  test_fragebogen_export_tier1.py  test_fragebogen_ingestion.py  test_fragebogen_isolation.py  (+41 more)
frontend/: .gitignore  (+9 more)
(+448 files in other folders)
