[project]
name = "vaeren-backend"
version = "0.1.0"
description = "Vaeren Compliance-Autopilot — Django-Backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django>=5.0,<5.1",
    "django-environ>=0.11",
    "django-tenants>=3.7",
    "djangorestframework>=3.15",
    "drf-spectacular>=0.27",
    "psycopg[binary]>=3.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "DJ", "RUF"]
ignore = [
    "E501",
    "DJ001",
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E", "F", "W", "N", "B", "RUF012"]
"**/settings/*.py" = ["F405", "F403"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "factory-boy>=3.3",
    "pytest>=8",
    "pytest-django>=4.8",
    "responses>=0.25",
    "ruff>=0.6",
]
