[project]
name = "vaeren-backend"
version = "0.1.0"
description = "Vaeren Compliance-Autopilot — Django-Backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "cryptography>=48.0.0",
    "dj-rest-auth>=6.0",
    "django>=5.0,<5.1",
    "django-allauth>=64",
    "django-environ>=0.11",
    "django-otp>=1.2",
    "django-polymorphic>=3.1",
    "django-tenants>=3.7",
    "djangorestframework>=3.15",
    "drf-spectacular>=0.27",
    "faker>=30",
    "openai>=2.36.0",
    "psycopg[binary]>=3.2",
    "python-dateutil>=2.9.0.post0",
    "rules>=3.4",
    "weasyprint>=68.1",
    "celery>=5.4",
    "redis>=5.0",
    "django-anymail[brevo,mailjet]>=12.0",
    "daphne>=4.1",
    "sentry-sdk[django]>=2.0",
    "django-filter>=25.1",
    "feedparser>=6.0.12",
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "responses>=0.26.0",
    "pillow>=11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "DJ", "RUF"]
ignore = [
    "E501",
    "DJ001",
    "RUF001",  # Deutsche Prosa enthält Unicode-Striche (ambiguous chars in identifiers)
    "RUF002",  # idem für Docstrings
    "RUF003",  # idem für Comments
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E", "F", "W", "N", "B", "RUF012"]
"**/settings/*.py" = ["F405", "F403"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "factory-boy>=3.3",
    "pyotp>=2.9.0",
    "pytest>=8",
    "pytest-cov>=5.0",
    "pytest-django>=4.8",
    "responses>=0.25",
    "ruff>=0.6",
]
